# tic_tac_toe

./: CMakeLists.txt  GEMINI.md  README.md
include/: elements.hpp  engine.hpp  globals.hpp  input.hpp  window.hpp
src/: elements.cpp  engine.cpp  input.cpp  main.cpp  window.cpp
